# FairWindSK

./: .clang-tidy  .dockerignore  .gitignore  AGENTS.md  AppItem.cpp  AppItem.hpp  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Configuration.cpp  Configuration.hpp  FairWindSK.cpp  FairWindSK.hpp  IterableLayoutAdapter.hpp  Localization.cpp  Localization.hpp  PList.cpp  PList.hpp  README.md  SignalKClient.cpp  SignalKClient.hpp  Units.cpp  Units.hpp  connector-test-delete.txt  fairwindsk.json  main.cpp  resources.qrc
.github/workflows/: manuals.yml  release.yml  verify.yml
android/: AndroidManifest.xml
android/res/values/: colors.xml  styles.xml
apple/: Info.plist.in
cmake/: InstallRaspberryDesktopIntegration.cmake.in  SanitizeAppleInstallScript.cmake  fairwindsk-startup.desktop.in  fairwindsk.desktop.in
docs/: README.md  Windows.md  android.md  architecture.md  building.md  configuring.md  container.md  developing_guide.md  fairwindsk_user_guide.md  fariwindsk_user_guide.md  getting_started.md  gui.md  hardware.md  ios.md  linux.md  macos.md  multilingual.md  raspberrypi.md  releasing.md  research.md  signalk-server-docker.md  testing.md  ui_shell.md  use_case.md  windows.md
docs/figures/: README.md
docs/manual/: README.md
docs/press/: README.md  generate_press_kit.py
docs/stores/: README.md  asset-manifest.json  generate_asset_manifest.py  generate_store_assets.py  privacy-policy.md  submission-checklist.md  support.md  validate_store_assets.py
extras/: FairWindSK.sh  README.md  fairwindsk-startup  fairwindsk-startup.desktop  fairwindsk.desktop
platform/android/: AndroidApplicationBridge.cpp  AndroidApplicationBridge.hpp
resources/i18n/: fairwindsk_es.ts  fairwindsk_fr.ts  fairwindsk_it.ts
resources/json/: configuration.json  signalk.json  units.json
resources/stylesheets/: dawn.qss  day.qss  default.qss  dusk.qss  night.qss  sunset.qss
runtime/: DiagnosticsSupport.cpp  DiagnosticsSupport.hpp  ManualScreenshotCapture.cpp  ManualScreenshotCapture.hpp
schemas/: configuration.schema.json  signalk.schema.json  units.schema.json
scripts/ci/: android_smoke.sh  static_checks.py
scripts/manual/: build_manuals.sh  capture_screenshots.sh
scripts/release/: create-manifest.py
signalk/: Client.cpp  Client.hpp  Document.cpp  Document.hpp  Note.cpp  Note.hpp  ProtocolUtils.cpp  ProtocolUtils.hpp  Subscription.cpp  Subscription.hpp  Waypoint.cpp  Waypoint.hpp
tests/: ConfigurationTest.cpp  DataWidgetConfigTest.cpp  GeoCoordinateUtilsTest.cpp  PListTest.cpp  SignalKProtocolTest.cpp  SignalKValueObjectsTest.cpp  SimulatedSignalKServiceTest.cpp
tests/support/: SimulatedSignalKService.cpp  SimulatedSignalKService.hpp
ui/: DrawerDialogHost.cpp  DrawerDialogHost.hpp  GeoCoordinateEditorWidget.cpp  GeoCoordinateEditorWidget.hpp  GeoCoordinateEditorWidget.ui  GeoCoordinateUtils.cpp  GeoCoordinateUtils.hpp  IconUtils.hpp  Launcher.cpp  Launcher.hpp  Launcher.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Settings.cpp  Settings.hpp  Settings.ui
ui/about/: About.cpp  About.hpp  About.ui
ui/autopilot/: Autopilot.cpp  Autopilot.hpp  Autopilot.ui
ui/bottombar/: AlarmsBar.cpp  AlarmsBar.hpp  AlarmsBar.ui  AnchorBar.cpp  AnchorBar.hpp  AnchorBar.ui  AutopilotBar.cpp  AutopilotBar.hpp  AutopilotBar.ui  BottomBar.cpp  BottomBar.hpp  BottomBar.ui  MOBBar.cpp  MOBBar.hpp  MOBBar.ui  POBBar.cpp  POBBar.hpp  POBBar.ui
ui/launcher/: Launcher.cpp  Launcher.hpp  Launcher.ui
ui/layout/: BarLayout.cpp  BarLayout.hpp  BarRuntime.cpp  BarRuntime.hpp
ui/mydata/: Charts.cpp  Charts.hpp  Charts.ui  DirItemInfo.cpp  DirItemInfo.hpp  DirItemInfo.ui  DriveInfo.cpp  DriveInfo.hpp  DriveInfo.ui  FileInfoListModel.cpp  FileInfoListModel.hpp  FileViewer.cpp  FileViewer.hpp  FileViewer.ui  Files.cpp  Files.hpp  Files.ui  GeoJsonPreviewWidget.cpp  GeoJsonPreviewWidget.hpp  GeoJsonPreviewWidget.ui  GeoJsonUtils.cpp  GeoJsonUtils.hpp  HistoryTrackModel.cpp  HistoryTrackModel.hpp  HistoryTrackTab.cpp  HistoryTrackTab.hpp  HistoryTrackTab.ui  ImageViewer.cpp  ImageViewer.hpp  ImageViewer.ui  ImageViewerWidget.cpp  ImageViewerWidget.hpp  ImageWidget.cpp  ImageWidget.hpp  JsonItemModel.cpp  JsonItemModel.hpp  JsonObjectEditorWidget.cpp  JsonObjectEditorWidget.hpp  JsonObjectEditorWidget.ui  JsonTreeItem.cpp  (+50 more)
ui/settings/: AndroidApps.cpp  AndroidApps.hpp  AppDetailsWidget.cpp  AppDetailsWidget.hpp  AppDetailsWidget.ui  Apps.cpp  Apps.hpp  Apps.ui  BarLayoutSettings.cpp  BarLayoutSettings.hpp  BarSettingsUi.hpp  Comfort.cpp  Comfort.hpp  Connection.cpp  Connection.hpp  Connection.ui  DataWidgets.cpp  DataWidgets.hpp  LayoutPreviewListWidget.cpp  LayoutPreviewListWidget.hpp  Main.cpp  Main.hpp  Main.ui  PageDetailsWidget.cpp  PageDetailsWidget.hpp  PageDetailsWidget.ui  Settings.cpp  Settings.hpp  Settings.ui  SignalK.cpp  SignalK.hpp  SignalK.ui  System.cpp  System.hpp  System.ui  TopBar.cpp  TopBar.hpp  Units.cpp  Units.hpp  Units.ui  (+2 more)
ui/topbar/: TopBar.cpp  TopBar.hpp  TopBar.ui
ui/web/: Browser.cpp  Browser.hpp  BrowserWindow.cpp  BrowserWindow.hpp  CertificateErrorDialog.ui  DownloadManagerWidget.cpp  DownloadManagerWidget.hpp  DownloadManagerWidget.ui  DownloadWidget.cpp  DownloadWidget.hpp  DownloadWidget.ui  MobileWebView.qml  NavigationBar.cpp  NavigationBar.hpp  NavigationBar.ui  PasswordDialog.ui  SignalKAppView.cpp  SignalKAppView.hpp  SignalKAppView.ui  TabWidget.cpp  TabWidget.hpp  Web.cpp  Web.hpp  Web.ui  WebPage.cpp  WebPage.hpp  WebPopupWindow.cpp  WebPopupWindow.hpp  WebView.cpp  WebView.hpp
ui/widgets/: DataWidget.cpp  DataWidget.hpp  DataWidgetConfig.cpp  DataWidgetConfig.hpp  SignalKMetricState.hpp  SignalKServerBox.cpp  SignalKServerBox.hpp  SignalKServerBox.ui  SignalKStatusIconsWidget.cpp  SignalKStatusIconsWidget.hpp  TouchCheckBox.cpp  TouchCheckBox.hpp  TouchCheckBox.ui  TouchColorPicker.cpp  TouchColorPicker.hpp  TouchComboBox.cpp  TouchComboBox.hpp  TouchComboBox.ui  TouchFileBrowser.cpp  TouchFileBrowser.hpp  TouchIconBrowser.cpp  TouchIconBrowser.hpp  TouchScrollArea.cpp  TouchScrollArea.hpp  TouchSpinBox.cpp  TouchSpinBox.hpp  TouchSpinBox.ui
(+82 files in other folders)
